deployments/jellyfin/jellyfin-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "jellyfin.k3s-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
